# expectation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: run-tests.yml
examples/: abtesting-proportions.ipynb  conformal-evalues.ipynb  confseq-demo.ipynb  quantile-testing.ipynb  savi-demo.ipynb  simple-demo.ipynb  variance-monitoring.ipynb
expectation/agentic/: agents.py  designer.py  evaluator.py  executor.py  interface.py  models.py  orchestrator.py  utils.py
expectation/conformal/: adaptivethreshold.py  conformal.py  cusum.py  demo.ipynb
expectation/confseq/: confidenceconfig.py  confidencesequence.py
expectation/modules/: boundaries.py  epower.py  hypothesistesting.py  martingales.py  orderstatistics.py  quantiletest.py
expectation/parametric/: ttest_universal.py
expectation/seqtest/: sequential_e_testing.py
expectation/utils/: helper_functions.py
tests/confseq/: test_confidencesequence.py
tests/modules/: test_boundaries.py  test_epower.py  test_hypothesistesting.py  test_martingales.py  test_orderstatistics.py  test_quantiletest.py
tests/modules/conformal/: test_adaptive.py  test_conformal.py  test_cusum.py
tests/parametric/: test_ttest_universal.py
tests/seqtest/: test_sequential_e_testing.py
